toponavi-dsl/src/main/java/topomap/grammar/MapFileParser.java
// Generated from MapFile.g4 by ANTLR 4.13.2
package topomap.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MapFileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, ID=70, FLOAT=71, INT=72, STRING=73, NL=74, 
		WS=75, COMMENT=76, BLOCK_COMMENT=77, OUT_OF_ORDER=78;
	public static final int
		RULE_surfaceDef = 0, RULE_globalConfigBody = 1, RULE_surfaceBody = 2, 
		RULE_globalConfigElement = 3, RULE_surfaceBodyElement = 4, RULE_coreDef = 5, 
		RULE_paramList = 6, RULE_param = 7, RULE_typeExpr = 8, RULE_typeAtom = 9, 
		RULE_recordType = 10, RULE_fieldDecl = 11, RULE_expr = 12, RULE_atom = 13, 
		RULE_fieldAssign = 14, RULE_block = 15, RULE_stmt = 16, RULE_pathSpec = 17, 
		RULE_arrowSpec = 18, RULE_linearPathSpec = 19, RULE_requirements = 20, 
		RULE_accessAnnotation = 21, RULE_uncertainRequirements = 22, RULE_ridePolicyOperand = 23, 
		RULE_constraintBody = 24, RULE_requireClause = 25, RULE_recordAssign = 26, 
		RULE_identifier = 27, RULE_listLiteral = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"surfaceDef", "globalConfigBody", "surfaceBody", "globalConfigElement", 
			"surfaceBodyElement", "coreDef", "paramList", "param", "typeExpr", "typeAtom", 
			"recordType", "fieldDecl", "expr", "atom", "fieldAssign", "block", "stmt", 
			"pathSpec", "arrowSpec", "linearPathSpec", "requirements", "accessAnnotation", 
			"uncertainRequirements", "ridePolicyOperand", "constraintBody", "requireClause", 
			"recordAssign", "identifier", "listLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'root'", "'('", "')'", "'topo-map'", "'override-managed-by'", 
			"'transport'", "'is'", "'building-includes'", "'{'", "'}'", "'vehicle'", 
			"'submap'", "'using'", "'managed-by'", "'topo-node'", "'atomic-path'", 
			"'station'", "'at'", "'on'", "'ride-from'", "'to'", "'direction'", "'<->'", 
			"'->'", "'directional-arrow'", "'linear-path'", "'constraint'", "'type'", 
			"'='", "'def'", "':'", "'let'", "','", "'Int'", "'Float'", "'Bool'", 
			"'String'", "'.'", "'-'", "'*'", "'/'", "'+'", "'=='", "'<'", "'>'", 
			"'<='", "'>='", "'if'", "'then'", "'else'", "'in'", "'rec'", "'fix'", 
			"'\\'", "'fn'", "'=>'", "'true'", "'false'", "';'", "'['", "']'", "'<-'", 
			"'requires'", "'&&'", "'subject-to'", "'because'", "'any'", "'require'", 
			"'::'", null, null, null, null, null, null, null, null, "'out-of-order'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "ID", "FLOAT", 
			"INT", "STRING", "NL", "WS", "COMMENT", "BLOCK_COMMENT", "OUT_OF_ORDER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MapFile.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MapFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceDefContext extends ParserRuleContext {
		public SurfaceDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surfaceDef; }
	 
		public SurfaceDefContext() { }
		public void copyFrom(SurfaceDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceDefTopoMapExprContext extends SurfaceDefContext {
		public List<TerminalNode> ID() { return getTokens(MapFileParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MapFileParser.ID, i);
		}
		public SurfaceBodyContext surfaceBody() {
			return getRuleContext(SurfaceBodyContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public SurfaceDefTopoMapExprContext(SurfaceDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterSurfaceDefTopoMapExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitSurfaceDefTopoMapExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitSurfaceDefTopoMapExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceDefRootExprContext extends SurfaceDefContext {
		public TerminalNode ID() { return getToken(MapFileParser.ID, 0); }
		public SurfaceBodyContext surfaceBody() {
			return getRuleContext(SurfaceBodyContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public SurfaceDefRootExprContext(SurfaceDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterSurfaceDefRootExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitSurfaceDefRootExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitSurfaceDefRootExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceDefGlobalConfigExprContext extends SurfaceDefContext {
		public GlobalConfigBodyContext globalConfigBody() {
			return getRuleContext(GlobalConfigBodyContext.class,0);
		}
		public SurfaceDefGlobalConfigExprContext(SurfaceDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterSurfaceDefGlobalConfigExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitSurfaceDefGlobalConfigExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitSurfaceDefGlobalConfigExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceDefTransportExprContext extends SurfaceDefContext {
		public TerminalNode ID() { return getToken(MapFileParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SurfaceBodyContext surfaceBody() {
			return getRuleContext(SurfaceBodyContext.class,0);
		}
		public SurfaceDefTransportExprContext(SurfaceDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterSurfaceDefTransportExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitSurfaceDefTransportExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitSurfaceDefTransportExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurfaceDefContext surfaceDef() throws RecognitionException {
		SurfaceDefContext _localctx = new SurfaceDefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_surfaceDef);
		int _la;
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new SurfaceDefRootExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__0);
				setState(59);
				match(ID);
				setState(60);
				match(T__1);
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID || _la==NL) {
					{
					setState(61);
					paramList();
					}
				}

				setState(64);
				match(T__2);
				setState(65);
				surfaceBody();
				}
				break;
			case T__3:
				_localctx = new SurfaceDefTopoMapExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(T__3);
				setState(67);
				match(ID);
				setState(68);
				match(T__1);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID || _la==NL) {
					{
					setState(69);
					paramList();
					}
				}

				setState(72);
				match(T__2);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(73);
					match(T__4);
					setState(74);
					match(ID);
					}
				}

				setState(77);
				surfaceBody();
				}
				break;
			case T__5:
				_localctx = new SurfaceDefTransportExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(T__5);
				setState(79);
				match(ID);
				setState(80);
				match(T__6);
				setState(81);
				expr(0);
				setState(82);
				surfaceBody();
				}
				break;
			case T__7:
				_localctx = new SurfaceDefGlobalConfigExprContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				match(T__7);
				setState(85);
				globalConfigBody();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalConfigBodyContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(MapFileParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MapFileParser.NL, i);
		}
		public List<GlobalConfigElementContext> globalConfigElement() {
			return getRuleContexts(GlobalConfigElementContext.class);
		}
		public GlobalConfigElementContext globalConfigElement(int i) {
			return getRuleContext(GlobalConfigElementContext.class,i);
		}
		public GlobalConfigBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalConfigBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterGlobalConfigBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitGlobalConfigBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitGlobalConfigBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalConfigBodyContext globalConfigBody() throws RecognitionException {
		GlobalConfigBodyContext _localctx = new GlobalConfigBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalConfigBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__8);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(89);
					match(NL);
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(95);
					globalConfigElement();
					setState(97); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(96);
							match(NL);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(99); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10 || _la==T__11) {
				{
				setState(106);
				globalConfigElement();
				}
			}

			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(109);
				match(NL);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SurfaceBodyContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(MapFileParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MapFileParser.NL, i);
		}
		public List<SurfaceBodyElementContext> surfaceBodyElement() {
			return getRuleContexts(SurfaceBodyElementContext.class);
		}
		public SurfaceBodyElementContext surfaceBodyElement(int i) {
			return getRuleContext(SurfaceBodyElementContext.class,i);
		}
		public SurfaceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surfaceBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterSurfaceBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitSurfaceBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitSurfaceBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurfaceBodyContext surfaceBody() throws RecognitionException {
		SurfaceBodyContext _localctx = new SurfaceBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_surfaceBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__8);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(118);
					match(NL);
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					surfaceBodyElement();
					setState(126); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(125);
							match(NL);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(128); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1648599494227624452L) != 0) || ((((_la - 70)) & ~0x3f) == 0 && ((1L << (_la - 70)) & 15L) != 0)) {
				{
				setState(135);
				surfaceBodyElement();
				}
			}

			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(138);
				match(NL);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalConfigElementContext extends ParserRuleContext {
		public GlobalConfigElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalConfigElement; }
	 
		public GlobalConfigElementContext() { }
		public void copyFrom(GlobalConfigElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalConfigElementVehicleRefContext extends GlobalConfigElementContext {
		public TerminalNode ID() { return getToken(MapFileParser.ID, 0); }
		public GlobalConfigElementVehicleRefContext(GlobalConfigElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterGlobalConfigElementVehicleRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitGlobalConfigElementVehicleRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitGlobalConfigElementVehicleRef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalConfigElementSubmapRefContext extends GlobalConfigElementContext {
		public List<TerminalNode> ID() { return getTokens(MapFileParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MapFileParser.ID, i);
		}
		public GlobalConfigElementSubmapRefContext(GlobalConfigElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).enterGlobalConfigElementSubmapRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapFileListener ) ((MapFileListener)listener).exitGlobalConfigElementSubmapRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapFileVisitor ) return ((MapFileVisitor<? extends T>)visitor).visitGlobalConfigElementSubmapRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalConfigElementContext globalConfigElement() throws RecognitionException {
		GlobalConfigElementContext _localctx = new GlobalConfigElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globalConfigElement);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				_localctx = new GlobalConfigElementVehicleRefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				match(T__10);
				setState(147);
				match(ID);
				}
				break;
			case T__11:
				_localctx = new GlobalConfigElementSubmapRefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(T__11);
				setState(149);
				match(ID);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(150);
					match(T__12);
					setState(151);
					match(ID);
					}
				}

				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__13) {
					{
					setState(154);
					match(T__13);
					setState(155);
					match(ID);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
